add auth server
